# quadruped_ros2_control

./: .gitmodules  LICENSE  README.md  readme.md
commands/joystick_input/: CMakeLists.txt  README.md  package.xml  readme.md
commands/joystick_input/include/joystick_input/: JoystickInput.h
commands/joystick_input/launch/: joystick.launch.py
commands/joystick_input/src/: JoystickInput.cpp
commands/keyboard_input/: CMakeLists.txt  README.md  package.xml  readme.md
commands/keyboard_input/include/keyboard_input/: KeyboardInput.h
commands/keyboard_input/src/: KeyboardInput.cpp
controllers/leg_pd_controller/: CMakeLists.txt  README.md  leg_pd_controller.xml  package.xml
controllers/leg_pd_controller/include/leg_pd_controller/: LegPdController.h
controllers/leg_pd_controller/src/: LegPdController.cpp
controllers/legged_gym_controller/: CMakeLists.txt  README.md  legged_gym_controller.xml  package.xml
controllers/legged_gym_controller/src/: LeggedGymController.cpp  LeggedGymController.h  rl_sdk.cpp
controllers/legged_gym_controller/src/FSM/: StateFixedDown.cpp  StateFixedStand.cpp  StatePassive.cpp  StateRL.cpp
controllers/ocs2_quadruped_controller/: CMakeLists.txt  README.md  ocs2_quadruped_controller.xml  package.xml
controllers/ocs2_quadruped_controller/config/: elevation_mapping.yaml  visualize_ocs2.rviz
controllers/ocs2_quadruped_controller/launch/: gazebo.launch.py  mujoco.launch.py
controllers/ocs2_quadruped_controller/src/: Ocs2QuadrupedController.cpp  Ocs2QuadrupedController.h  SafetyChecker.h
controllers/ocs2_quadruped_controller/src/FSM/: StateOCS2.cpp
controllers/ocs2_quadruped_controller/src/control/: CtrlComponent.cpp  GaitManager.cpp  TargetManager.cpp
controllers/ocs2_quadruped_controller/src/estimator/: FromOdomTopic.cpp  FromTopicEstimate.cpp  GroundTruth.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
controllers/ocs2_quadruped_controller/src/interface/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
controllers/ocs2_quadruped_controller/src/perceptive_interface/: ConvexRegionSelector.cpp  PerceptiveLeggedInterface.cpp  PerceptiveLeggedPrecomputation.cpp  PerceptiveLeggedReferenceManager.cpp
controllers/ocs2_quadruped_controller/src/wbc/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
controllers/rl_quadruped_controller/: CMakeLists.txt  README.md  package.xml  rl_quadruped_controller.xml
controllers/rl_quadruped_controller/launch/: gazebo.launch.py  gazebo_classic.launch.py  mujoco.launch.py
controllers/rl_quadruped_controller/src/: LeggedGymController.cpp  LeggedGymController.h  RlQuadrupedController.cpp  RlQuadrupedController.h
controllers/rl_quadruped_controller/src/FSM/: StateFixedDown.cpp  StateFixedStand.cpp  StatePassive.cpp  StateRL.cpp
controllers/rl_quadruped_controller/src/common/: ObservationBuffer.cpp  ObservationBuffer.h
controllers/rl_quadruped_controller/src/control/: Estimator.cpp  LowPassFilter.cpp
controllers/rl_quadruped_controller/src/robot/: QuadrupedRobot.cpp  RobotLeg.cpp
controllers/unitree_guide_controller/: CMakeLists.txt  README.md  package.xml  readme.md  unitree_guide_controller.xml
controllers/unitree_guide_controller/config/: controller.yaml
controllers/unitree_guide_controller/include/unitree_guide_controller/: UnitreeGuideController.h
controllers/unitree_guide_controller/launch/: controller.launch.py  gazebo.launch.py  gazebo_classic.launch.py  mujoco.launch.py
controllers/unitree_guide_controller/src/: UnitreeGuideController.cpp
controllers/unitree_guide_controller/src/FSM/: StateBalanceTest.cpp  StateFixedDown.cpp  StateFixedStand.cpp  StateFreeStand.cpp  StatePassive.cpp  StateSwingTest.cpp  StateTrotting.cpp
controllers/unitree_guide_controller/src/control/: BalanceCtrl.cpp  Estimator.cpp  LowPassFilter.cpp
controllers/unitree_guide_controller/src/gait/: FeetEndCalc.cpp  FeetEndCtrl.cpp  FootEndCtrl.cpp  GaitGenerator.cpp  WaveGenerator.cpp
controllers/unitree_guide_controller/src/quadProgpp/: Array.cc  QuadProg++.cc  QuadProg++.hh
controllers/unitree_guide_controller/src/robot/: QuadrupedRobot.cpp  RobotLeg.cpp
controllers/unitree_guide_controller/src/robotics/: QuadrupedRobot.cpp  RobotLeg.cpp
descriptions/anybotics/anymal_c_description/: CMakeLists.txt  README.md  package.xml
descriptions/anybotics/anymal_c_description/config/: robot_control.yaml
descriptions/anybotics/anymal_c_description/launch/: ocs2_control.launch.py  unitree_guide.launch.py  visualize.launch.py
descriptions/anybotics/anymal_c_description/xacro/: body.xacro  gazebo.xacro  materials.xacro  robot.xacro  ros2_control.xacro
descriptions/deep_robotics/lite3_description/: CMakeLists.txt  README.md  package.xml
descriptions/deep_robotics/lite3_description/config/: gazebo.yaml  robot_control.yaml
descriptions/deep_robotics/lite3_description/launch/: gazebo_unitree_guide.launch.py  unitree_guide.launch.py  visualize.launch.py
descriptions/deep_robotics/lite3_description/meshes/: FL_HIP.dae  FR_HIP.dae  HL_HIP.dae  (+5 more)
descriptions/deep_robotics/x30_description/: CMakeLists.txt  README.md  package.xml
descriptions/magiclab&xiaomi/magicdog_description/: CMakeLists.txt  LICENSE.txt  README.md  package.xml
descriptions/unitree/b2_description/: CMakeLists.txt  README.md  package.xml
descriptions/unitree/go2_description/: README.md  package.xml
hardwares/hardware_unitree_mujoco/: CMakeLists.txt  HardwareUnitree.xml  README.md  package.xml  readme.md
hardwares/hardware_unitree_mujoco/src/: HardwareUnitree.cpp  crc32.h
hardwares/hardware_unitree_mujoco/xacro/: ros2_control.xacro
libraries/controller_common/: CMakeLists.txt  package.xml
libraries/gz_quadruped_playground/: CMakeLists.txt  README.md  package.xml
libraries/gz_quadruped_playground/config/: ocs2.rviz  rviz.rviz
libraries/gz_quadruped_playground/launch/: gazebo.launch.py  ocs2.launch.py  unitree_guide.launch.py
libraries/gz_quadruped_playground/worlds/: baylands.sdf  default.sdf  warehouse.sdf
libraries/qpoases_colcon/: CMakeLists.txt  package.xml
(+400 files in other folders)
