<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_input</name>
  <version>0.0.0</version>
  <description>A package to convert joystick signal to control input</description>
  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>control_input_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
