<?xml version="1.0"?>
<package format="2">
  <name>anymal_c_description</name>
  <version>0.0.0</version>
  <description>The anymal_c_description package</description>

  <license>BSD-3</license>

  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
