<?xml version="1.0"?>
<package format="2">
  <name>lite3_description</name>
  <version>0.0.0</version>
  <description>The lite3_description package</description>

  <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>
  <license>MIT</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
