<?xml version="1.0"?>

<package format="2">
  <name>magicdog_description</name>
  <version>0.0.0</version>
  <description>
    Visualization for the Magic Lab quadruped.
  </description>

  <author>TODO</author>
  <maintainer email="opensource@magiclab.top"/>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
